<resources>
    <string name="app_name">Quiz</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="programming_hero">Programming Hero</string>
    <string name="quiz">Quiz</string>
    <string name="high_score_label">High Score</string>
    <string name="high_score">%1$d Point</string>
    <string name="start">Start</string>
    <string name="question_count">Question: %1$d/%2$d</string>
    <string name="score">Score: %1$d</string>
    <string name="point">%1$d Point</string>
    <string name="question">What is this logo?</string>
    <string name="java">Java</string>
    <string name="python">Python</string>
    <string name="kotlin">Kotlin</string>
    <string name="java_script">Java Script</string>
    <string name="your_score">Your final score is <b>%1$d</b> </string>
    <string name="final_score">Score</string>
    <string name="ok">OK</string>


    //Network Error
    <string name="failure_bad_request">Bad Request.</string>
    <string name="failure_can_not_connect_to_the_server">Can not connect to the server.</string>
    <string name="failure_forbidden_request">Forbidden Request.</string>
    <string name="failure_internal_server_error">Internal server error.</string>
    <string name="failure_method_not_allowed">Method not allowed.</string>
    <string name="failure_no_internet_available">No internet available.</string>
    <string name="failure_not_exist_in_cache">Not exist in cache.</string>
    <string name="failure_not_found">Not found.</string>
    <string name="failure_too_many_request">Too many request.</string>
    <string name="failure_unauthorized_error">Unauthorized error.</string>

    <string name="failure_failed_to_cache">Failed to cache.</string>

</resources>